style: update title

--- a/frontend/src/content/blog/modelo-alocacao-estudo-por-disciplina.mdx
+++ b/frontend/src/content/blog/modelo-alocacao-estudo-por-disciplina.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Como alocar seu tempo de estudo: o modelo das 4 variáveis"
+title: "Onde investir suas horas de estudo para maximizar sua nota"
 description: "Descubra por que seguir planejamentos genéricos não funciona e aprenda a personalizar sua alocação de estudo por disciplina."
 pubDate: 2026-01-26
 author: "Equipe Horas Líquidas"
